1998-09-06  Martin Baulig  <martin@home-of-linux.org>

	* gnome-mdi.h (gnome_mdi_active_view): New function.
	(gnome_mdi_set_active_view): New function.

	* gnome-mdi.c: Renamed static `gnome_mdi_set_active_view()'
 	to `set_active_view()' and added new global function
 	`gnome_mdi_set_active_view()'.

Fri Sep 04 17:53:41 1998  George Lebl  <jirka@5z.com>

	* gnome-color-picker.c: initialize use_alpha

1998-09-03  Martin Baulig  <martin@home-of-linux.org>

	* gnome-font-selector.c (gnome_font_select_with_default): New
	function. Same as gnome_font_select () but let you give a
	default font.

Thu Sep  3 05:47:19 1998  Tim Janik  <timj@gtk.org>

	* gnome-icon-list.c (gnome_icon_list_forall): provide a _forall
	implementation instead of _foreach.

1998-09-02  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-canvas.c (gnome_canvas_root): Changed the return type to
	GnomeCanvasGroup, as it is more convenient that way.

	* gnome-color-picker.[ch]: New color picker that is a real
	widget.  GnomeColorSelector is now deprecated.

	* gnome-color-selector.c (gnome_color_selector_new): Added message
	of deprecation.

	* libgnomeui.h: Added gnome-color-picker.h to the list of headers.

	* Makefile.am: Added gnome-color-picker.[ch] to the sources.

1998-09-02  Martin Baulig  <martin@home-of-linux.org>

	* gnome-mdi.c (gnome_mdi_rename_child): New function. This is
	required to set the correct name in the menu item.

1998-09-01  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-app-helper.c (gnome_create_toolbar_with_data,
	gnome_create_toolbar_custom): New routines to reuse the toolbar
	creation code without having the toolbar be attached by default.

1998-08-28  Havoc Pennington  <hp@pobox.com>

	* gtklayout.c (gtk_layout_move): Fix infinite loop (add
	g_list_next on each iteration).

1998-08-25  Havoc Pennington  <hp@pobox.com>

	* gnome-canvas.h (gnome_canvas_item_set_valist): New function
	takes a va_list as argument.